git add.->git commit-m "update" -> git puch

--- a/index.html
+++ b/index.html
@@ -1,31 +1,40 @@
 <!DOCTYPE html>
 <html lang="se">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Just+Another+Hand&family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&display=swap" rel="stylesheet">
-</head>
-
-<body>
-  <img src="images/Skärmbild 2023-09-15 151713.png" alt="letter" class="letter" />
-  <img src="images/Skärmbild 2023-09-17 201104.png" alt="stamp" class="stamp">
-  <div class="adress">
-    <p>Waser</p>
-    <p>Vintergatan 15</p>
-    <p>504 60 Borås</p>
-    <p>Sweden</p>
-  </div>
-  <div class="sender">
-    <p>Ms. Jane H. Doe</p>
-    <p>40 Theatre Street </p>
-    <p>Sun City, AZ 98723 </p>
-    <p>USA</p>
-  </div>
-</body>
-
+  <body>
+    <img
+      src="images/Skärmbild 2023-09-15 151713.png"
+      alt="letter"
+      class="letter"
+    />
+    <img
+      src="images/Skärmbild 2023-09-17 201104.png"
+      alt="stamp"
+      class="stamp"
+    />
+    <div class="receiver">
+      <p>Mike Waser</p>
+      <p>Vintergatan 15</p>
+      <p>504 60 Borås</p>
+      <p>Sweden</p>
+    </div>
+    <div class="sender">
+      <p>Ms. Jane H. Doe</p>
+      <p>40 Theatre Street</p>
+      <p>Sun City, AZ 98723</p>
+      <p>USA</p>
+    </div>
+  </body>
 </html>
